# bypassify-windows-2nd-iter

./: .gitmodules  CMakeLists.txt  README.md
bootstrap/: CMakeLists.txt  runclient.cpp  rundumper.cpp  shared.hpp
client/: CMakeLists.txt  auth.cpp  auth.hpp  client.cpp  client.hpp  dllmain.cpp  dwmcore.cpp  dwmcore.hpp  gpthelper.cpp  gpthelper.hpp  imagehelper.cpp  imagehelper.hpp  input.cpp  mathrender.cpp  mathrender.hpp  offsets.cpp  offsets.hpp  settings.cpp  settings.hpp  settings_ui.cpp  settings_ui.hpp
dumper/: CMakeLists.txt  dumper.cpp
imgui/: CMakeLists.txt  imgui_impl_win32.cpp  imgui_impl_win32.h
injector/: CMakeLists.txt  injector.cpp  injector.hpp  injectorlib.cpp
shared/: offsetblob.h  offsetidx.h
